// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Node API can handle dot in package name 1`] = `
Object {
  "detectedDependencies": Array [
    "lodash.get",
  ],
  "missingDependencies": Array [
    "lodash.get",
  ],
  "unusedDependencies": Array [],
}
`;

exports[`Node API can handle dot in package name 2`] = `
Object {
  "lodash.get": Array [
    Object {
      "filePath": "index.ts",
      "lineNumber": 1,
    },
  ],
}
`;

exports[`Node API should work with directory parameter 1`] = `
Object {
  "detectedDependencies": Array [
    "brace-expansion",
    "glob",
    "minimatch",
  ],
  "missingDependencies": Array [
    "brace-expansion",
    "glob",
  ],
  "unusedDependencies": Array [],
}
`;

exports[`Node API should work with directory parameter 2`] = `
Object {
  "brace-expansion": Array [
    Object {
      "filePath": "dist/index.js",
      "lineNumber": 2,
    },
  ],
  "glob": Array [
    Object {
      "filePath": "dist/index.js",
      "lineNumber": 3,
    },
  ],
  "minimatch": Array [
    Object {
      "filePath": "dist/index.js",
      "lineNumber": 1,
    },
  ],
}
`;

exports[`Node API should work with extension parameter 1`] = `
Object {
  "detectedDependencies": Array [
    "brace-expansion",
    "glob",
    "minimatch",
  ],
  "missingDependencies": Array [
    "brace-expansion",
    "glob",
  ],
  "unusedDependencies": Array [],
}
`;

exports[`Node API should work with extension parameter 2`] = `
Object {
  "brace-expansion": Array [
    Object {
      "filePath": "src/index.ts",
      "lineNumber": 2,
    },
  ],
  "glob": Array [
    Object {
      "filePath": "src/index.ts",
      "lineNumber": 3,
    },
  ],
  "minimatch": Array [
    Object {
      "filePath": "src/index.ts",
      "lineNumber": 1,
    },
  ],
}
`;

exports[`Node API should work with simple demo 1`] = `
Object {
  "detectedDependencies": Array [
    "brace-expansion",
    "glob",
    "minimatch",
  ],
  "missingDependencies": Array [
    "brace-expansion",
    "glob",
  ],
  "unusedDependencies": Array [],
}
`;

exports[`Node API should work with simple demo 2`] = `
Object {
  "brace-expansion": Array [
    Object {
      "filePath": "src/index.js",
      "lineNumber": 2,
    },
  ],
  "glob": Array [
    Object {
      "filePath": "src/index.js",
      "lineNumber": 3,
    },
  ],
  "minimatch": Array [
    Object {
      "filePath": "src/index.js",
      "lineNumber": 1,
    },
  ],
}
`;
